Fix header nav not covering table sticky column

--- a/res/mahjong.css
+++ b/res/mahjong.css
@@ -21,6 +21,7 @@ header {
   position: fixed;
   top: 0;
   width: 100vw;
+  z-index: 1;
 }
 header > nav {
   background: #fed;
